--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,16 @@
-/vendor/
-node_modules/
-npm-debug.log
-yarn-error.log
-
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
-
-# Laravel 5 & Lumen specific with changed public path
-public_html/storage
-public_html/hot
-
-storage/*.key
-.env
+/vendor
+/node_modules
+/public/hot
+/public/storage
 Homestead.yaml
 Homestead.json
+/storage/*.key
 /.vagrant
+npm-debug.log
+.env
+/.idea/
 .phpunit.result.cache
-
-/public/build
-/storage/pail
+.php_cs.cache
 .env.backup
-.env.production
-.phpactor.json
-auth.json
+yarn-error.log
+/ftpsync.settings
